--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,7 @@ $container-width: 1280px;
 $header-text: rgb(25, 6, 6);
 $text-color-white: #ffffff;
 $text-color-two: #facf64;
+$text-color-two-hover: #dbb147;
 $text-color-gray: #c0ccd1;
 $hobbi-bg: #bac7dd;
 $hobbi-bg-hover: #757e8c;
@@ -56,7 +57,7 @@ header {
       justify-content: space-between;
       align-items: center;
       padding: 15px;
-      height: 100px !important;
+      height: 90px !important;
 
       .header-left {
         max-width: 300px;
@@ -194,6 +195,7 @@ header {
         display: block;
         margin: 0 auto;
         color: $text-color-white;
+        text-shadow: 2px 2px 10px black;
         font-weight: 800;
       }
 
@@ -205,6 +207,7 @@ header {
         align-items: center;
         margin-top: 30px;
         color: $text-color-two;
+        text-shadow: 2px 2px 10px black;
         font-weight: 700;
       }
 
@@ -628,6 +631,9 @@ header {
           padding: 3px 40px;
           background-color: $text-color-two;
           border-radius: 5px;
+          &:hover{
+            background-color: $text-color-two-hover;
+          }
           i {
             color: $text-color-white;
           }
